# kubeblocks-client

./: .gitignore  README.md  get-crds.sh
apis/apps/v1alpha1/: backuppolicytemplate.yaml  cluster.yaml  clusterdefinition.yaml  clusterversion.yaml  component.yaml  componentclassdefinition.yaml  componentdefinition.yaml  componentresourceconstraint.yaml  configconstraint.yaml  configuration.yaml  opsdefinition.yaml  opsrequest.yaml  servicedescriptor.yaml
apis/dataprotection/v1alpha1/: actionset.yaml  backup.yaml  backuppolicy.yaml  backuprepo.yaml  backupschedule.yaml  restore.yaml
apis/extensions/v1alpha1/: addon.yaml
apis/storage/v1alpha1/: storageprovider.yaml
apis/workloads/v1alpha1/: instancesets.yaml  replicatedstatemachine.yaml
java/: README.md  generate.sh  pom.xml
java/src/main/java/io/kubeblocks/apps/: Types.java
java/src/main/java/io/kubeblocks/apps/models/: V1alpha1BackupPolicyTemplate.java  V1alpha1BackupPolicyTemplateList.java  V1alpha1BackupPolicyTemplateSpec.java  V1alpha1BackupPolicyTemplateSpecBackupMethods.java  V1alpha1BackupPolicyTemplateSpecBackupPolicies.java  V1alpha1BackupPolicyTemplateSpecBackupPoliciesInner.java  V1alpha1BackupPolicyTemplateSpecBackupPoliciesInnerBackupMethodsInner.java  V1alpha1BackupPolicyTemplateSpecBackupPoliciesInnerBackupMethodsInnerEnvInner.java  V1alpha1BackupPolicyTemplateSpecBackupPoliciesInnerTarget.java  (+666 more)
java/src/main/java/io/kubeblocks/client/: CustomObjectsApi.java
java/src/main/java/io/kubeblocks/sample/: Main.java
python/: README.md  sample.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
