[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
schemars = "0.8.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
